<resources>
    <string name="app_name">Simple Random Stock</string>
    <string name="email_address">willwcchan@gmail.com</string>
    <string name="contact_information">Contact Information:</string>
    <string name="author_name">Author: William Chan</string>
    <string name="current_version">Version 1.0</string>
    <string name="app_logo">app_logo</string>
    <string name="tab_index">U.S Index</string>
    <string name="tab_stock">Stock Picked</string>
    <string name="tab_history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_index">Index</string>
    <string name="fragment_stock">Stock</string>
    <string name="fragment_history">History</string>
    <string name="title_dow">Dow Jones 30</string>
    <string name="title_points_today">Points today</string>
    <string name="title_percentage_changed">Percentage Changed</string>
    <string name="title_spy"><![CDATA[S&P 500]]></string>
    <string name="title_nasdaq">Nasdaq 100</string>

    <string name="stock_ticker">Stock Ticker</string>
    <string name="stock_name">Stock Name</string>
    <string name="stock_time_picked">Time</string>
    <string name="delete_stock_history">Delete a stock from history</string>
    <string name="no_stick_name_yet">No stock picked yet</string>
    <string name="no_stock_ticker_yet">No ticker picked yet</string>
    <string name="no_stock_date_picked_yet">No date picked yet</string>
    <string name="congratulations">Congratulations! Here is your random stock! </string>
    <string name="congratulations_picture">Congratulations picture</string>
    <string name="stock_name_hint">Apple (AAPL)</string>
    <string name="no_random_stock_selected_yet">No random stock selected yet</string>
    <string name="delete_all_stocks">Delete all stocks</string>
    <string name="about">About</string>
    <string name="referral_links_to_support_the_creator">Referral Link(s) to support the creator</string>

    <string name="robinhood_referral_link">
        <a href="https://join.robinhood.com/williac1866"> https://join.robinhood.com/williac1866 </a>
    </string>
    <string name="disclaimer">Disclaimer</string>
    <string name="fullText_disclaimer">Simple Random Stock is for fun and
        educational purposes only. This application should not be viewed as
        financial advice or stock recommendation to buy, sell, or hold any security or investment.
        Investors should be cautious about any and all stock recommendations. Please consult
        with a professional financial adviser before making any financial decisions.</string>

</resources>
