<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="4sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="16sp">

        <TextView
            android:id="@+id/stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_name"
            android:textAppearance="@style/Widget.MaterialComponents.CardView"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/stock_ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_ticker"
            android:textAppearance="@style/Widget.MaterialComponents.CardView"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/stock_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/Widget.MaterialComponents.CardView"
            android:text="@string/stock_time_picked"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/delete_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginLeft="15sp"
            android:contentDescription="@string/delete_stock_history"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</androidx.cardview.widget.CardView>